--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -6,8 +6,7 @@ section#contact {
   .section-heading {
     color: $white;
   }
-  .form-group {
-    margin-bottom: 25px;
+  +-bottom: 25px;
     input,
     textarea {
       padding: 20px;
