--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -11,9 +11,8 @@
 
 // Layout
 @import "layout/masthead.scss";
-@import "layout/services.scss";
+@import "layout/initiatives.scss";
 @import "layout/portfolio.scss";
 @import "layout/timeline.scss";
-@import "layout/team.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
