--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -4,7 +4,7 @@ section#contact {
   background-repeat: no-repeat;
   background-position: center;
   .section-heading {
-    color: $black;
+    color: $black-900;
   }
   
   // Styling for the team section
