--- a/css/agency.css
+++ b/css/agency.css
@@ -585,14 +585,13 @@ header.masthead .intro-text .intro-heading {
 }
 
 section#contact {
-  background-color: #212529;
-  background-image: url("../img/map-image.png");
+  background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 section#contact .section-heading {
-  color: #fff;
+  color: rgb(15, 0, 0);
 }
 
 section#contact .form-group {
